// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should not render when not visible 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isActive={true}
    isPressed={false}
    isVisible={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Notification should render when active and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isActive={true}
    isPressed={false}
    isVisible={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
      "fill": "rgba(255,255,255,1)",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
        "fill": "rgba(255,255,255,1)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Notification should render when inactive and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isActive={false}
    isPressed={false}
    isVisible={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
      "fill": "rgba(255,255,255,0.4)",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
        "fill": "rgba(255,255,255,0.4)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Notification should render when inactive and pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Notification
    isActive={false}
    isPressed={true}
    isVisible={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
      "fill": "rgba(255,255,255,0.2)",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "d": "M223.5,4c7.7,0,14,6.3,14,14s-6.3,14-14,14s-14-6.3-14-14S215.8,4,223.5,4 M223.5,1c-9.4,0-17,7.6-17,17 s7.6,17,17,17s17-7.6,17-17S232.9,1,223.5,1L223.5,1z",
        "fill": "rgba(255,255,255,0.2)",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
